Updated some text and changed the images

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     <body>
         <div class="row">
             <div class="col-12 page-header" id="home">
-                <img class="icon-logo" src="assets/img/valentino-logo.png"/>
+                <img class="icon-logo" src="assets/img/naruto che flexxa.jpeg"/>
                 <span><a class="home-page" href="#contact">Contact</a></span>
                 <span><a class="home-page" href="#projects">Projects</a></span>
                 <span><a class="home-page" href="#home">Home</a></span>
             </div>
             <div class="col-12 page-home">
-                <p class="i-am">Hey, io sono valentino</p>
-                <p class="what-i-do"><i>E sono un web developer</i></p>
+                <p class="i-am">Hey, i am valentino</p>
+                <p class="what-i-do"><i>And i'm learning web development</i></p>
             </div>
             <div class="col-12 projects-page" id="projects">
                 <p><b>These are my projects!</b></p><hr>
                  <div class="col-2 box-projects">
                     <p><b>PORTFOLIO</b></p><br>
                     <p>This website is a portfolio website i made for myself in only a few hours!</p>
-                    <img src="assets/img/valentino-logo.png">
+                    <img src="assets/img/naruto che flexxa.jpeg">
                 </div>
             </div>
             <div class="col-12 work-together">
