Fixed image not working

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="row">
             <div class="col-12 page-header" id="home">
-                <img class="icon-logo" src="assets/img/naruto che flexxa.jpeg"/>
+                <img class="icon-logo" src="https://i.pinimg.com/474x/4d/52/ed/4d52ed8fad09b2c5a3881fee28b87dac.jpg>
                 <span><a class="home-page" href="#contact">Contact</a></span>
                 <span><a class="home-page" href="#projects">Projects</a></span>
                 <span><a class="home-page" href="#home">Home</a></span>
@@ -34,7 +34,7 @@
                  <div class="col-2 box-projects">
                     <p><b>PORTFOLIO</b></p><br>
                     <p>This website is a portfolio website i made for myself in only a few hours!</p>
-                    <img src="assets/img/naruto che flexxa.jpeg">
+                    <img src="assets/img/https://i.pinimg.com/474x/4d/52/ed/4d52ed8fad09b2c5a3881fee28b87dac.jpg">
                 </div>
             </div>
             <div class="col-12 work-together">
